# learn-opengl

./: .gitignore  CMakeLists.txt  vcpkg.json
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
